nivasa-macros/tests/trybuild/validation_min_malformed.stderr
error: expected `#[min(<number>)]`
 --> tests/trybuild/validation_min_malformed.rs:5:5
  |
5 |     #[min]
  |     ^
